更新h2的sql脚本以及增加h2的MySQL语法兼容设置，修复test模式下项目启动报错的问题

--- a/agileboot-admin/src/main/resources/application-test.yml
+++ b/agileboot-admin/src/main/resources/application-test.yml
@@ -10,7 +10,7 @@ spring:
             datasource:
                 master:
                     # h2 内存数据库 内存模式连接配置 库名: agileboot
-                    url: jdbc:h2:mem:agileboot;DB_CLOSE_DELAY=-1
+                    url: jdbc:h2:mem:agileboot;DB_CLOSE_DELAY=-1;MODE=MySQL
                     h2:
                         # 开启console 访问 默认false
                         console:
