--- a/.github/workflows/ci-cd.yml
+++ b/.github/workflows/ci-cd.yml
@@ -104,13 +104,13 @@ jobs:
         with:
           token: ${{ secrets.GITHUB_TOKEN }}
 
-      # 发送构建状态通知
-      - name: Notify Build Status
-        if: always()
-        uses: rtCamp/action-slack-notify@v2.2.1
-        env:
-          SLACK_WEBHOOK: ${{ secrets.SLACK_WEBHOOK || '' }}
-          SLACK_CHANNEL: build-notifications
-          SLACK_COLOR: ${{ job.status }}
-          SLACK_TITLE: Build Status for Java ${{ matrix.java-version }}
-          SLACK_MESSAGE: 'Build ${{ job.status }} on Java ${{ matrix.java-version }}'
+      # # 发送构建状态通知
+      # - name: Notify Build Status
+      #   if: always()
+      #   uses: rtCamp/action-slack-notify@v2.2.1
+      #   env:
+      #     SLACK_WEBHOOK: ${{ secrets.SLACK_WEBHOOK || '' }}
+      #     SLACK_CHANNEL: build-notifications
+      #     SLACK_COLOR: ${{ job.status }}
+      #     SLACK_TITLE: Build Status for Java ${{ matrix.java-version }}
+      #     SLACK_MESSAGE: 'Build ${{ job.status }} on Java ${{ matrix.java-version }}'
