--- a/.github/workflows/ci-cd.yml
+++ b/.github/workflows/ci-cd.yml
@@ -99,8 +99,8 @@ jobs:
 
       # 只在 Java 17 版本上更新依赖图（权限和token已修复）
       - name: Update dependency graph
-        uses: advanced-security/maven-dependency-submission-action@571e99aab1055c2e71a1e2309b9691de18d6b7d6
-        if: matrix.java-version == '17'
+        uses: advanced-security/maven-dependency-submission-action@v4
+        if: matrix.java-version == '17' && success()
         with:
           token: ${{ secrets.GITHUB_TOKEN }}
 
