--- a/.github/workflows/ci-cd.yml
+++ b/.github/workflows/ci-cd.yml
@@ -97,12 +97,12 @@ jobs:
           retention-days: 5
           if-no-files-found: warn
 
-      # 只在 Java 17 版本上更新依赖图（权限和token已修复）
-      - name: Update dependency graph
-        uses: advanced-security/maven-dependency-submission-action@v4
-        if: matrix.java-version == '17' && success()
-        with:
-          token: ${{ secrets.GITHUB_TOKEN }}
+      # # 只在 Java 17 版本上更新依赖图（权限和token已修复）
+      # - name: Update dependency graph
+      #   uses: advanced-security/maven-dependency-submission-action@v4
+      #   if: matrix.java-version == '17' && success()
+      #   with:
+      #     token: ${{ secrets.GITHUB_TOKEN }}
 
       # # 发送构建状态通知
       # - name: Notify Build Status
