增加GitHub打包配置

--- a/pom.xml
+++ b/pom.xml
@@ -351,6 +351,13 @@
             </plugin>
         </plugins>
     </build>
+    <distributionManagement>
+        <repository>
+            <id>github</id>
+            <url>https://maven.pkg.github.com/BruceBlink/AgileBoot-Back-End</url>
+        </repository>
+    </distributionManagement>
+
 
 <!--    <repositories>-->
 <!--        <repository>-->
