--- a/agileboot-admin/pom.xml
+++ b/agileboot-admin/pom.xml
@@ -55,6 +55,15 @@
                     </execution>
                 </executions>
             </plugin>
+            <plugin>
+                <groupId>org.apache.maven.plugins</groupId>
+                <artifactId>maven-surefire-plugin</artifactId>
+                <version>${maven.surefire.plugin.version}</version>
+                <!-- 想跑test的话  设置成false  -->
+                <configuration>
+                    <skipTests>false</skipTests>
+                </configuration>
+            </plugin>
 
         </plugins>
     </build>
