--- a/pom.xml
+++ b/pom.xml
@@ -42,6 +42,7 @@
         <com.google.guava.version>31.0.1-jre</com.google.guava.version>
         <springdoc-openapi-ui.version>1.6.14</springdoc-openapi-ui.version>
         <mysql-connector-java>8.0.31</mysql-connector-java>
+        <yashandb-jdbc>1.7.10</yashandb-jdbc>
         <spring.boot.version>2.7.10</spring.boot.version>
         <maven.compiler.plugin.version>3.1</maven.compiler.plugin.version>
         <!-- 升级版本以支持junit5 -->
@@ -148,6 +149,13 @@
                 <groupId>mysql</groupId>
                 <artifactId>mysql-connector-java</artifactId>
                 <version>${mysql-connector-java}</version>
+            </dependency>
+
+            <!-- yashandb驱动包 -->
+            <dependency>
+                <groupId>com.yashandb</groupId>
+                <artifactId>yashandb-jdbc</artifactId>
+                <version>${yashandb-jdbc}</version>
             </dependency>
 
             <!-- collections工具类 -->
